# spiralous

./: .gitignore  Cargo.toml
src/: boid.rs  main.rs  quat_extra.rs
