[package]
name = "spiralous"
version = "0.1.0"
authors = ["iancormac84 <wilnathan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.4.0"
bevy_flycam = { git = "https://github.com/sburris0/bevy_flycam.git", branch = "main" }

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy.git" }